# Copyright 2014 The Brave Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/ui.gni")
import("//tools/grit/grit_rule.gni")

grit("brave_strings") {
  source = "brave_strings.grd"
  output_dir = "$root_gen_dir/brave"
  outputs = [
    "grit/brave_strings.h",
    "brave_strings.pak",
  ]

  resource_ids = "//electron/resource_ids"
}
