# Copyright 2014 The Brave Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/ui.gni")
import("//tools/grit/grit_rule.gni")
import("//services/service_manager/public/service_manifest.gni")

service_manifest("brave_content_packaged_services_manifest_overlay") {
  source = "//chrome/browser/chrome_content_packaged_services_manifest_overlay.json"
  packaged_services = [
    "//chrome/utility:profile_import_manifest",
  ]
}

group("brave_content_manifest_overlays") {
  deps = [
    "//chrome/app:chrome_content_manifest_overlays",
    ":brave_content_packaged_services_manifest_overlay",
  ]
}

if (use_aura) {
  service_manifest("brave_content_packaged_services_manifest") {
    source_manifest = "//content/public/app:packaged_services_manifest"
    overlays = [ ":brave_content_packaged_services_manifest_overlay" ]
  }

  group("service_manifests") {
    data_deps = [
      "//chrome/app:service_manifests",
      "//chrome/app:chrome_renderer_manifest",
      ":brave_content_packaged_services_manifest_overlay",
    ]
  }
}

grit("brave_strings") {
  source = "brave_strings.grd"
  output_dir = "$root_gen_dir/brave"
  outputs = [
    "grit/brave_strings.h",
    "brave_strings.pak",
  ]

  resource_ids = "//electron/resource_ids"
}
